dist/LineScript-win64-20260616/tests/cases/compile_fail/owned_bad_ctor.lsc
main() -> i64 do
  declare owned x: i64 = 42
  println(x)
  return 0
end
